--- a/pom.xml
+++ b/pom.xml
@@ -145,7 +145,9 @@
 	</reporting>
 	
 	<scm>
-	<connection>https://github.com/kosimiki/painter.git</connection>
-	<url>https://github.com/kosimiki/painter</url>
+	
+	<connection>scm:git:http://github.com/osimiki/painter</connection>
+	<url>https://github.com/kosimiki/painter.git</url>
+
 	</scm>
 </project>
