--- a/pom.xml
+++ b/pom.xml
@@ -58,46 +58,32 @@
 	<build>
 		<finalName>PainterApp</finalName>
 		<plugins>
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>2.3</version>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.5.4</version>
 				<executions>
 					<execution>
-						<phase>package</phase>
 						<goals>
-							<goal>shade</goal>
+							<goal>single</goal>
 						</goals>
+						<phase>package</phase>
 						<configuration>
-							<artifactSet>
-								<excludes>
-									<exclude>junit:junit</exclude>
-									<exclude>jmock:*</exclude>
-									<exclude>*:xml-apis</exclude>
-									…
-								</excludes>
-							</artifactSet>
-							<transformers>
-								<transformer
-									implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-									<resource>
-										META-INF/services/conf.file
-									</resource>
-								</transformer>
-								<transformer
-									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<manifestEntries>
-										<Main-Class>hu.unideb.inf.MainApp</Main-Class>
-										<X-Compile-Source-JDK>1.8</X-Compile-Source-JDK>
-										<X-Compile-Target-JDK>1.8</X-Compile-Target-JDK>
-									</manifestEntries>
-								</transformer>
-							</transformers>
+							<archive>
+								<manifest>
+									<mainClass>
+										hu.unideb.inf.MainApp
+									</mainClass>
+								</manifest>
+							</archive>
+							<descriptorRefs>
+								<descriptorRef>jar-with-dependencies</descriptorRef>
+							</descriptorRefs>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
+			<!-- Hey -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
